done with dashboard

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ DB_HOST=localhost
 DB_USER=root
 DB_PASS=dextar
 DB_NAME=blood_bank
-JWT_SECRET=H3d$4#1f8jD2X9kA0qPlM$wZ7vE!cGh
+JWT_SECRET='H3d$4#1f8jD2X9kA0qPlM$wZ7vE!cGh'
