--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=dextar
-DB_NAME=blood_bank
+DB_HOST=bunnjctuxinigjfzcbli-mysql.services.clever-cloud.com
+DB_USER=uofxb2ngu7wr5kbq
+DB_PASS="T592fXE39LF9wuUjLD6d"
+DB_NAME=bunnjctuxinigjfzcbli
+DB_PORT=3306
 JWT_SECRET='H3d$4#1f8jD2X9kA0qPlM$wZ7vE!cGh'
